# MonkeyType

./: pyproject.toml  tox.ini
.github/workflows/: test.yml
demo/: inbox.py  models.py  test_inbox.py
doc/: conf.py
monkeytype/: compat.py  encoding.py  stubs.py  tracing.py  typing.py
monkeytype/db/: sqlite.py
tests/: test_cli.py  test_config.py  test_encoding.py  test_stubs.py  test_typing.py
