[build-system]
requires = ["setuptools >= 82.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MonkeyType"
version = "23.3.1.dev1"
requires-python = ">=3.9"
description = "Generating type annotations from sampled production types"
authors = [
    {name = "Matt Page", email = "mpage@instagram.com"},
]
license = "BSD-2-Clause"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "libcst>=0.4.4",
    "typing-extensions>=4.15.0",
]

dynamic = ["readme"]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "sphinx<7.2",
    "twine",
    "tox",
    "ruff",
]

[project.scripts]
monkeytype = "monkeytype.cli:entry_point_main"

[project.urls]
Homepage = "https://github.com/Instagram/MonkeyType"

[tool.setuptools.packages.find]
exclude = [
    "tests",
    "tests.*",
]

[tool.setuptools.package-data]
monkeytype = ["py.typed"]

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "CHANGES.rst"]}

[tool.mypy]
python_version = "3.9"
platform = "linux"
show_column_numbers = true
strict = true
files = [
    "monkeytype",
]

[[tool.mypy.overrides]]
module = [
    "pytest.*",
    "parser.*",
    "django.*",
]
ignore_missing_imports = true

[tool.pytest]
addopts = [
    "--tb", "short",
]
